--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 数据在手，天下我有！
-subtitle:
+title: 数据在手，天下我有！——公众号和网站频繁被封，诸多文章遗失，粉丝有存档可联系我放上来。为防恶意举报和网警查封，部分敏感文章设置访问密码，加我微信 songyang-6，发几毛钱红包，给你发密码。
+subtitle: 老蛮目前全网无新号。公众号和网站频繁被封，诸多文章遗失，有粉丝有存档可联系我放上来。为防恶意举报和网警查封，部分敏感文章设置访问密码，加我微信，发几毛钱红包，给你发密码
 description:
 keywords:
 author: laoman
-language:
+language: zh-Hans
 timezone:
 
 # URL
