--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 数据在手，天下我有！——公众号和网站频繁被封，诸多文章遗失，粉丝有存档可联系我放上来。为防恶意举报和网警查封，部分敏感文章设置访问密码，加我微信 songyang-6，发几毛钱红包，给你发密码。
-subtitle: 老蛮目前全网无新号。公众号和网站频繁被封，诸多文章遗失，有粉丝有存档可联系我放上来。为防恶意举报和网警查封，部分敏感文章设置访问密码，加我微信，发几毛钱红包，给你发密码
+title: 洋少微信 songyang-6，发1毛钱红包，给你发密码。
+subtitle:
 description:
 keywords:
 author: laoman
@@ -73,8 +73,8 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-# theme: landscape
-theme: mashiro
+theme: landscape
+# theme: mashiro
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
