--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 洋少微信 songyang-6，发1毛钱红包，给你发密码。
+title: 数据在手，天下我有！加微信：songyang-6，发几毛钱红包，给你发文章密码。
 subtitle:
 description:
 keywords:
