--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 数据在手，天下我有！
-subtitle: 为防小人举报和网警稽查，敏感文章已加密，密码不止一个，加微信：songyang-6，发几毛钱红包，给你发文章密码。
-description:
+title: 数据在手，天下我有！（公众号：数据为皇。QQ群：667329352）
+subtitle: 部分文章有密码，加微信：songyang-6，发几毛钱红包给密码，全部文章打包存档，99一份，有偿获取。
+description:  
 keywords:
 author: laoman
 language: zh-Hans
