--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: 数据在手，天下我有！（公众号：数据为皇。QQ群：667329352）
-subtitle: 部分文章有密码，加微信：songyang-6，发几毛钱红包给密码，全部文章打包存档，99一份，有偿获取。
+subtitle: 部分文章有密码，加微信：songyang-6，老蛮历年经典长文已整理成书，50多万字，联系我，有偿获取。
 description:  
 keywords:
 author: laoman
